--- a/source/style.scss
+++ b/source/style.scss
@@ -27,3 +27,5 @@ Base includes
 @import 'sections/instagram';
 @import 'sections/blog';
 @import 'sections/related-articles';
+@import 'sections/related-products';
+@import 'sections/product';
