--- a/assets/style.css
+++ b/assets/style.css
@@ -1210,6 +1210,7 @@ a.link:hover, a:not([class]):hover {
   bottom: 0;
   left: 0;
   right: 0;
+  overflow: hidden;
 }
 
 .sidecart-background {
@@ -2480,6 +2481,219 @@ a.link:hover, a:not([class]):hover {
 
 .articles-grid__item {
   margin-bottom: 6rem;
+}
+
+.related-products {
+  background: var(--green);
+  padding-bottom: 4rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.related-products-wave2, .related-products-wave1 {
+  pointer-events: none;
+  z-index: 1;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 90%;
+  transform: translateY(0%)translateX(-50%)rotate(40deg);
+}
+
+.related-products-wave2:after, .related-products-wave1:after {
+  content: "";
+  padding-bottom: 56.2225%;
+  display: block;
+  position: relative;
+}
+
+.related-products-wave2 svg, .related-products-wave1 svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.related-products-wave2 path, .related-products-wave1 path {
+  stroke: #fff;
+}
+
+.related-products-wave2 {
+  transform: translateY(-50%)translateX(-50%)rotate(-130deg);
+}
+
+.related-products__list {
+  z-index: 2;
+  max-width: var(--content-width);
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+  padding: 10rem 0 0;
+  transition: all 1s cubic-bezier(.365, .04, .44, 1);
+  display: flex;
+  position: relative;
+}
+
+.related-products__list.inview {
+  transform: translateX(0%);
+}
+
+.related-products__list__title {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.related-products__list__item {
+  flex-wrap: wrap;
+}
+
+.related-products__list__item--product {
+  width: 33.3333%;
+  max-width: 50rem;
+  padding: 2rem;
+}
+
+@media only screen and (max-width: 1023px) {
+  .related-products__list__item--product {
+    width: 38%;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 967px) {
+  .related-products__list__item--product {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .related-products__list__item--product {
+    width: 80%;
+  }
+}
+
+.related-products__list__item--product h6, .related-products__list__item--product p {
+  color: #fff !important;
+}
+
+.related-products__list__item__image {
+  width: 100%;
+}
+
+.related-products__list__item__image img {
+  width: 100%;
+  height: auto;
+}
+
+.related-products__list__item__title {
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
+  display: flex;
+}
+
+.related-products__list__item__description {
+  width: 100%;
+}
+
+.related-products__marquee {
+  white-space: nowrap;
+  white-space: nowrap;
+  flex-wrap: wrap;
+  display: flex;
+  overflow: hidden;
+}
+
+.related-products__marquee__animation {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: transform;
+  margin: 10rem 0;
+  transition: all 22ms;
+  position: relative;
+  left: -50vw;
+}
+
+.related-products__marquee__animation span {
+  white-space: nowrap;
+  color: #0000;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+  padding: 4rem 1rem;
+  font-size: 7vw;
+  font-weight: 700;
+  line-height: 8vw;
+}
+
+.product {
+  background: var(--blue-light);
+  padding: 20rem 2rem;
+}
+
+.product-wrap {
+  max-width: var(--content-width);
+  flex-wrap: wrap;
+  margin: 0 auto;
+  display: flex;
+}
+
+.product-gallery {
+  width: 50%;
+  padding-right: 4rem;
+}
+
+.product-details {
+  width: 50%;
+  padding-top: 6rem;
+  padding-left: 4rem;
+}
+
+.product-details p, .product-details h1 {
+  color: var(--green);
+  max-width: 50rem;
+}
+
+.product-actions {
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
+  width: 100%;
+  display: flex;
+}
+
+.quantity {
+  flex-wrap: wrap;
+  width: 16rem;
+  display: flex;
+}
+
+.quantity-add, .quantity-remove {
+  color: var(--green);
+  text-align: center;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+  width: 5rem;
+  font-size: 4rem;
+  line-height: 2.5rem;
+}
+
+.quantity-input {
+  width: calc(100% - 10rem);
+}
+
+.quantity-input input {
+  color: var(--green);
+  text-align: center;
+  background: none;
+  border: 0;
+  outline: 0;
+  width: 100%;
+  padding: 0;
+  font-size: 3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
