--- a/source/sections/sidecart.scss
+++ b/source/sections/sidecart.scss
@@ -6,6 +6,7 @@
     opacity: 0;
     visibility: hidden;
     transition: all $fast;
+    overflow: hidden;
 
     &-background {
         @include full;
