--- a/source/sections/product.scss
+++ b/source/sections/product.scss
@@ -35,6 +35,11 @@
         width: 100%;
         align-items: center;
         align-content: center;
+        margin-top: 4rem;
+
+        .quantity {
+            margin-right: 2rem;
+        }
     }
 }
 
