--- a/source/style.scss
+++ b/source/style.scss
@@ -7,6 +7,7 @@ Base imports
 @import 'utilities/mixins';
 @import 'utilities/fonts';
 @import 'utilities/buttons';
+@import 'utilities/notyf';
 
 /*------------------------------------------------------------------
 Base includes
