--- a/assets/style.css
+++ b/assets/style.css
@@ -284,6 +284,7 @@ a.link:hover, a:not([class]):hover {
   border: 0;
   border-radius: 10000rem;
   padding: 1.25rem 5rem 1.65rem;
+  font-size: 1.6rem;
   text-decoration: none;
   transition: all .111s;
   display: inline-block;
@@ -327,6 +328,355 @@ a.link:hover, a:not([class]):hover {
   font-family: sofia-pro, sans-serif;
   font-weight: 600;
   margin: 2rem auto !important;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader, .loader:after {
+  border-radius: 50%;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.loader {
+  text-indent: -9999em;
+  border: .24rem solid #fff3;
+  border-left-color: #fff;
+  margin: 0 auto;
+  font-size: 10px;
+  animation: 1s linear infinite spinner;
+  display: none;
+  position: absolute;
+  top: 14px;
+  left: 0;
+  right: 0;
+  transform: translateZ(0);
+}
+
+.busy {
+  pointer-events: none;
+  position: relative;
+  color: var(--green) !important;
+}
+
+.busy .loader {
+  display: block;
+}
+
+body .notyf__ripple {
+  background: var(--green) !important;
+}
+
+body .notyf__message a {
+  color: var(--green);
+  text-decoration: none;
+  transition: all .333s;
+  overflow: hidden;
+  box-shadow: inset 0 -1px #fff, 0 1px #fff;
+  color: #fff !important;
+}
+
+body .notyf__message a:hover {
+  box-shadow: inset 0 -30px #fff, 0 1px #fff;
+  color: var(--green) !important;
+}
+
+@keyframes notyf-fadeinup {
+  0% {
+    opacity: 0;
+    transform: translateY(25%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes notyf-fadeinleft {
+  0% {
+    opacity: 0;
+    transform: translateX(25%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes notyf-fadeoutright {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateX(25%);
+  }
+}
+
+@keyframes notyf-fadeoutdown {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateY(25%);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    transform: scale(0)translateY(-45%)translateX(13%);
+  }
+
+  to {
+    transform: scale(1)translateY(-45%)translateX(13%);
+  }
+}
+
+.notyf {
+  color: #fff;
+  z-index: 9999;
+  pointer-events: none;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.notyf__icon--error, .notyf__icon--success {
+  background: #fff;
+  border-radius: 50%;
+  width: 21px;
+  height: 21px;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+}
+
+.notyf__icon--error:after, .notyf__icon--error:before {
+  content: "";
+  background: currentColor;
+  border-radius: 3px;
+  width: 3px;
+  height: 12px;
+  display: block;
+  position: absolute;
+  top: 5px;
+  left: 9px;
+}
+
+.notyf__icon--error:after {
+  transform: rotate(-45deg);
+}
+
+.notyf__icon--error:before {
+  transform: rotate(45deg);
+}
+
+.notyf__icon--success:after, .notyf__icon--success:before {
+  content: "";
+  background: currentColor;
+  border-radius: 3px;
+  width: 3px;
+  display: block;
+  position: absolute;
+}
+
+.notyf__icon--success:after {
+  height: 6px;
+  top: 9px;
+  left: 6px;
+  transform: rotate(-45deg);
+}
+
+.notyf__icon--success:before {
+  height: 11px;
+  top: 5px;
+  left: 10px;
+  transform: rotate(45deg);
+}
+
+.notyf__toast {
+  pointer-events: auto;
+  box-sizing: border-box;
+  border-radius: 2px;
+  flex-shrink: 0;
+  max-width: 300px;
+  padding: 0 15px;
+  animation: .3s ease-in forwards notyf-fadeinup;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  transform: translateY(25%);
+  box-shadow: 0 3px 7px #00000040;
+}
+
+.notyf__toast--disappear {
+  animation: .3s .25s forwards notyf-fadeoutdown;
+  transform: translateY(0);
+}
+
+.notyf__toast--disappear .notyf__icon, .notyf__toast--disappear .notyf__message {
+  opacity: 1;
+  animation: .3s forwards notyf-fadeoutdown;
+  transform: translateY(0);
+}
+
+.notyf__toast--disappear .notyf__dismiss {
+  opacity: 1;
+  animation: .3s forwards notyf-fadeoutright;
+  transform: translateX(0);
+}
+
+.notyf__toast--disappear .notyf__message {
+  animation-delay: 50ms;
+}
+
+.notyf__toast--upper {
+  margin-bottom: 20px;
+}
+
+.notyf__toast--lower {
+  margin-top: 20px;
+}
+
+.notyf__toast--dismissible .notyf__wrapper {
+  padding-right: 30px;
+}
+
+.notyf__ripple {
+  transform-origin: 100% 100%;
+  z-index: 5;
+  border-radius: 50%;
+  width: 400px;
+  height: 400px;
+  animation: .4s ease-out forwards ripple;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: scale(0)translateY(-51%)translateX(13%);
+}
+
+.notyf__wrapper {
+  z-index: 10;
+  border-radius: 3px;
+  align-items: center;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  padding-right: 15px;
+  display: flex;
+  position: relative;
+}
+
+.notyf__icon {
+  text-align: center;
+  opacity: 0;
+  width: 22px;
+  margin-right: 13px;
+  font-size: 1.3em;
+  animation: .3s .3s forwards notyf-fadeinup;
+}
+
+.notyf__dismiss {
+  opacity: 0;
+  width: 26px;
+  height: 100%;
+  margin-right: -15px;
+  animation: .3s .35s forwards notyf-fadeinleft;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.notyf__dismiss-btn {
+  cursor: pointer;
+  opacity: .35;
+  background-color: #00000040;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  transition: opacity .2s, background-color .2s;
+}
+
+.notyf__dismiss-btn:after, .notyf__dismiss-btn:before {
+  content: "";
+  background: #fff;
+  border-radius: 3px;
+  width: 2px;
+  height: 12px;
+  position: absolute;
+  top: calc(50% - 5px);
+  left: calc(50% - 1px);
+}
+
+.notyf__dismiss-btn:after {
+  transform: rotate(-45deg);
+}
+
+.notyf__dismiss-btn:before {
+  transform: rotate(45deg);
+}
+
+.notyf__dismiss-btn:hover {
+  opacity: .7;
+  background-color: #00000026;
+}
+
+.notyf__dismiss-btn:active {
+  opacity: .8;
+}
+
+.notyf__message {
+  vertical-align: middle;
+  opacity: 0;
+  line-height: 1.5em;
+  animation: .3s .25s forwards notyf-fadeinup;
+  position: relative;
+}
+
+@media only screen and (max-width: 480px) {
+  .notyf {
+    padding: 0;
+  }
+
+  .notyf__ripple {
+    width: 600px;
+    height: 600px;
+    animation-duration: .5s;
+  }
+
+  .notyf__toast {
+    border-radius: 0;
+    width: 100%;
+    max-width: none;
+    box-shadow: 0 -2px 7px #00000021;
+  }
+
+  .notyf__dismiss {
+    width: 56px;
+  }
 }
 
 .flickity-enabled {
@@ -2661,7 +3011,12 @@ a.link:hover, a:not([class]):hover {
   align-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 4rem;
   display: flex;
+}
+
+.product-actions .quantity {
+  margin-right: 2rem;
 }
 
 .quantity {
