updated teh side cart intearctions

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -56,6 +56,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="19" height="20">
           <path fill="#FFF" fill-rule="nonzero" d="M9.5 0c3.432 0 6.257 2.546 6.385 5.768h.122C17.644 5.767 19 7.023 19 8.614v8.537C19 18.742 17.644 20 16.007 20H2.993C1.356 20 0 18.742 0 17.152V8.615c0-1.59 1.356-2.848 2.993-2.848h.122C3.244 2.547 6.068 0 9.5 0Zm6.507 7.767h-.118v2.622h-2V7.767H5.11v2.622h-2V7.767h-.117c-.564 0-.993.397-.993.848v8.537c0 .45.429.848.993.848h13.014c.565 0 .993-.397.993-.848V8.615c0-.45-.428-.848-.993-.848ZM9.5 2C7.145 2 5.248 3.682 5.118 5.767h8.764C13.752 3.682 11.855 2 9.5 2Z"/>
         </svg>
+        <span class="header-actions__cart__count [ js-cart-count ] {% if cart.item_count != 0 %} active{% endif %}">
+          <b>{{ cart.item_count }}</b>
+        </span>
       </a>
 
       <a
