--- a/assets/style.css
+++ b/assets/style.css
@@ -1010,6 +1010,30 @@ body .notyf__message a:hover {
   top: 2px;
 }
 
+.header-actions__navigation__count, .header-actions__search__count, .header-actions__cart__count {
+  color: var(--green);
+  text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  background: #fff;
+  border-radius: .2rem;
+  width: 1.6rem;
+  height: 1.3rem;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  transition: all .5s cubic-bezier(.365, .04, .44, 1);
+  position: absolute;
+  top: 2.3rem;
+  right: 1.45rem;
+  scale: 0;
+}
+
+.header-actions__navigation__count.active, .header-actions__search__count.active, .header-actions__cart__count.active {
+  opacity: 1;
+  visibility: visible;
+  scale: 1;
+}
+
 .header-actions__navigation {
   width: 4.5rem;
   display: none;
@@ -1684,6 +1708,131 @@ body .notyf__message a:hover {
   fill: var(--green);
 }
 
+.sidecart-draw-items {
+  padding: 1rem 2rem;
+}
+
+.sidecart-draw-items__item {
+  border-bottom: 1px solid var(--off-white);
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  will-change: opacity, transform;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 2rem;
+  padding: 1rem 0;
+  transition: all .8s cubic-bezier(.165, .84, .44, 1);
+  display: flex;
+  transform: translateX(2rem)translateY(4rem);
+}
+
+.sidecart-draw-items__item:first-child {
+  transition-delay: .1s;
+}
+
+.sidecart-draw-items__item:nth-child(2) {
+  transition-delay: .2s;
+}
+
+.sidecart-draw-items__item:nth-child(3) {
+  transition-delay: .3s;
+}
+
+.sidecart-draw-items__item:nth-child(4) {
+  transition-delay: .4s;
+}
+
+.sidecart-draw-items__item:nth-child(5) {
+  transition-delay: .5s;
+}
+
+.sidecart-draw-items__item:nth-child(6) {
+  transition-delay: .6s;
+}
+
+.sidecart-draw-items__item:nth-child(7) {
+  transition-delay: .7s;
+}
+
+.sidecart-draw-items__item:nth-child(8) {
+  transition-delay: .8s;
+}
+
+.sidecart-draw-items__item:nth-child(9) {
+  transition-delay: .9s;
+}
+
+.sidecart-draw-items__item:nth-child(10) {
+  transition-delay: 1s;
+}
+
+.sidecart-draw-items__item__image {
+  width: 10rem;
+  position: relative;
+}
+
+.sidecart-draw-items__item__details {
+  width: calc(100% - 10rem);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  position: relative;
+}
+
+.sidecart-draw-items__item__details p {
+  margin: 0;
+}
+
+.sidecart-draw-items__item__details p:first-of-type {
+  color: #000;
+}
+
+.sidecart-draw-items__item__details__price {
+  margin: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.sidecart-draw-items__item__details__remove {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.sidecart-draw-items__item__details__remove svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.sidecart-draw-items__item__details__remove path {
+  fill: var(--grey-light);
+}
+
+.sidecart-draw-items .quantity {
+  border-left: 1px solid var(--off-white);
+  width: 10rem;
+  margin-top: .5rem;
+}
+
+.sidecart-draw-items .quantity-add, .sidecart-draw-items .quantity-remove {
+  border-right: 1px solid var(--off-white);
+  width: 3rem;
+  font-size: 2rem;
+  line-height: 1.9rem;
+}
+
+.sidecart-draw-items .quantity-input {
+  border-right: 1px solid var(--off-white);
+  width: calc(100% - 6rem);
+}
+
+.sidecart-draw-items .quantity-input input {
+  font-family: sofia-pro, sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
 .sidecart-draw-actions {
   text-align: center;
   padding: 2rem;
@@ -1776,6 +1925,11 @@ body .notyf__message a:hover {
 .sidecart-visible .sidecart-draw {
   opacity: 1;
   transform: rotateY(0);
+}
+
+.sidecart-visible .sidecart .sidecart-draw-items__item {
+  opacity: 1;
+  transform: translateX(0)translateY(0);
 }
 
 .search-pane {
