--- a/assets/style.css
+++ b/assets/style.css
@@ -1028,6 +1028,25 @@ body .notyf__message a:hover {
   scale: 0;
 }
 
+.header-actions__navigation__count:after, .header-actions__search__count:after, .header-actions__cart__count:after {
+  content: "";
+  border-radius: 100rem;
+  width: 1rem;
+  height: 1rem;
+  margin-top: 0;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%)translateY(-50%);
+}
+
+.header-actions__navigation__count.pulse:after, .header-actions__search__count.pulse:after, .header-actions__cart__count.pulse:after {
+  box-shadow: 0 0 0 0 var(--blue);
+  border-radius: 100rem;
+  animation: 2s infinite pulse;
+}
+
 .header-actions__navigation__count.active, .header-actions__search__count.active, .header-actions__cart__count.active {
   opacity: 1;
   visibility: visible;
@@ -1063,6 +1082,23 @@ body .notyf__message a:hover {
 @media only screen and (max-width: 1023px) {
   .header-actions__navigation {
     display: block;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: translateX(-50%)translateY(-50%)scale(.95);
+    box-shadow: 0 0 #0000004d;
+  }
+
+  70% {
+    transform: translateX(-50%)translateY(-50%)scale(1.4);
+    box-shadow: 0 0 0 10px #0000;
+  }
+
+  100% {
+    transform: translateX(-50%)translateY(-50%)scale(.95);
+    box-shadow: 0 0 #0000;
   }
 }
 
