--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -1,12 +1,14 @@
 <h1>Main Page</h1>
+
 {{ page.content }}
+
 {% schema %}
 {
-  "name": "t:sections.main-page.name",
+  "name": "Mainpage",
   "tag": "section",
   "class": "section",
   "settings": [
-    {
+    { 
       "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
     },
