dded section tags

--- a/sections/grid-block.liquid
+++ b/sections/grid-block.liquid
@@ -89,6 +89,11 @@
 {% schema %}
 {
   "name": "Grid",
+  "class": "section",
+  "tag": "section",
+  "disabled_on": {
+    "groups": ["header", "footer"]
+  },
   "settings": [
     {
       "type": "text",
