added ni another block types

--- a/sections/grid-block.liquid
+++ b/sections/grid-block.liquid
@@ -115,7 +115,7 @@
   "max_blocks": 3,
   "blocks": [
     {
-      "name": "Grid Item",
+      "name": "grid-item",
       "settings": [
         {
           "id": "title",
