--- a/sections/hero-block.liquid
+++ b/sections/hero-block.liquid
@@ -1,7 +1,6 @@
 <div class="hero">
   <div class="hero__background">
     {{ section.settings.image | image_url: width: 1500, height: 800 | image_tag }}
-   
   </div>
 
   <div class="hero__wrap">
@@ -35,6 +34,11 @@
       "id": "image",
       "type": "image_picker",
       "label": "Image"
+    }
+  ],
+  "presets": [
+    {
+      "name": "Hero"
     }
   ]
 }
