--- a/sections/grid-block.liquid
+++ b/sections/grid-block.liquid
@@ -38,14 +38,16 @@
 
       <a
         href="{{ block.settings.link_link }}"
-        class="grid__item grid__item--{% if count == 1  %}large{% else %}small{% endif %}"
+        class="grid__item grid__item--{% if count == 1 %}large{% else %}small{% endif %}"
       >
         <div class="grid__item__image">
-          {% if count == 1 %}
-            {{ block.settings.image | image_url: width: 690, height: 690 | image_tag }}
-          {% else %}
-            {{ block.settings.image | image_url: width: 690, height: 340 | image_tag }}
-          {% endif %}
+          {%- if block.settings.image != blank -%}
+            {% if count == 1 %}
+              {{ block.settings.image | image_url: width: 690, height: 690 | image_tag }}
+            {% else %}
+              {{ block.settings.image | image_url: width: 690, height: 340 | image_tag }}
+            {% endif %}
+          {%- endif -%}
         </div>
         <div class="grid__item__copy">
           <h5 class="colour--white">
