added collection block

--- a/sections/collections-block.liquid
+++ b/sections/collections-block.liquid
@@ -173,7 +173,6 @@
         <p>This is a short product description.</p>
       </div>
     </div>
-
   </div>
 
   {% comment %}
@@ -187,3 +186,16 @@
     </div>
   </div>
 </div>
+
+{% schema %}
+{
+  "name": "Collection",
+  "settings": [],
+  "blocks": [],
+  "presets": [
+    {
+      "name": "Collection"
+    }
+  ]
+}
+{% endschema %}
