--- a/sections/collections-block.liquid
+++ b/sections/collections-block.liquid
@@ -204,7 +204,17 @@
       "type": "collection_item",
       "settings": [
         {
-          "id": "title",
+          "id": "thumbnail",
+          "type": "image_picker",
+          "label": "Thumbnail"
+        },
+        {
+          "id": "copy",
+          "type": "text",
+          "label": "Copy"
+        },
+        {
+          "id": "Collection",
           "type": "collection",
           "label": "Collection"
         }
